Correct important note icon spacing

--- a/themes/unya/sass/_page-get-involved.scss
+++ b/themes/unya/sass/_page-get-involved.scss
@@ -307,3 +307,7 @@ section.donation{
 .planning {
   margin-top: 2rem !important;
 }
+
+#important-note-icon {
+  margin-right: 1rem;
+}
